fixed neighbors button position on mobile

--- a/vis/css/style.css
+++ b/vis/css/style.css
@@ -143,9 +143,16 @@ rect {
 
   #line {
     position: absolute;
-    top: 0;
-    right: 5px;
+    top: 5px;
+    right: 15px;
     bottom: auto;
     width: auto;
+  }
+
+  #neighbors {
+    margin: 52px 110px 0;
+    margin-top: 52px;
+    margin-left: 110px;
+    margin-bottom: 0;
   }
 } 
